# fitness_mcp

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_SKILLS_RESEARCH.md  FITNESS_COACH_CHATGPT.md  FITNESS_COACH_INSTRUCTIONS.md  FITNESS_COACH_INSTRUCTIONS_COMPACT.md  FITNESS_COACH_INSTRUCTIONS_CONSOLIDATED.md  FITNESS_COACH_INSTRUCTIONS_SIMPLE.md  IMPLEMENTATION_SUMMARY.md  ISSUE_TRACKING.md  MIGRATION_SUMMARY.md  NAMING_CONVENTIONS.md  PASSING_INSTRUCTIONS_BEST_PRACTICES.md  README.md  check_overview.py  check_verbose_data.py  cleanup_data.py  compact_data.py  main.py  pyproject.toml  pytest.ini  seed_profile.py  sync-commands.sh  test_deployment_latency.py  test_entries_client.py  test_mcp_client.py  test_simplified.py  test_single_operation.py
.claude/agents/: logfire-observability-expert.md  plan-validator.md
PRPs/: INITIAL.md  memory-server.md
archive/: FITNESS_COACH_INSTRUCTIONS_COMPACT.md  PROGRAMMING.md.old
memory-mcp-server/: .env.example  .gitignore  Dockerfile  PROJECT_STRUCTURE.md  README.md  fly.toml  main.py  pyproject.toml  test_server.py
memory-mcp-server/src/: crud.py  (+1 more)
migrations/: 002_create_entries.sql  003_simplify_schema.sql  004_cleanup_naming_conventions.sql  004_remove_attrs.sql
planning/: README.md
scripts/: migrate_planning_structure.py  transform_workout_plans.py
skills/: KNOWLEDGE-WRITING-GUIDE.md  README.md
src/: mcp_server.py  mcp_server_simple.py
tests/: conftest.py  test_entries_crud.py  test_event_updates.py  test_mcp_tools.py  test_memory_server.py  test_overview.py  test_temporal_context.py  test_workout_log_pattern.py
(+61 files in other folders)
